updated anchorFCI R package

--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
             <tr>
               <td class="panel-heading" role="tab" id="heading12">  
                 <Strong>Ribeiro, A. H.</Strong>, Crnkovic, M., Pereira, J. L., Fisberg, R. M., Sarti, F. M., Rogero, M. M., Heider, D., and Cerqueira, A. (2024). AnchorFCI: Harnessing Genetic Anchors for Enhanced Causal Discovery of Cardiometabolic Disease Pathways. <i> Frontiers in Genetics. </i> 
-                15:1436947. DOI: 10.3389/fgene.2024.1436947. <a href="https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2024.1436947/abstract" target="_blank">(Link)</a></td>
+                15:1436947. DOI: 10.3389/fgene.2024.1436947. <a href="https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2024.1436947/full" target="_blank">(Link)</a></td>
               <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse12" aria-expanded="false" aria-controls="collapse12"></a></td>
             </tr> 
           </table>
@@ -822,6 +822,25 @@ Suppose we identify G-causality between the graph models' parameters. In that ca
     
         <div class="panel-group" id="accordion-libraries" role="tablist" aria-multiselectable="true">
        
+          <div class="panel panel-default">
+            <table style="width:100%">
+              <tr>
+                <td class="panel-heading" role="tab" id="heading4-libraries"><Strong>Ribeiro, A. H.</Strong> (2024). anchorFCI: an extension of the FCI algorithm designed to improve robustness and discovery power in causal discovery by strategically selecting reliable anchors, while leveraging their known non-ancestral relationships. <a href="https://github.com/adele/anchorFCI" target="_blank">https://github.com/adele/anchorFCI</a> </td>
+                <td><a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion-libraries" data-target="#collapse4-libraries" aria-expanded="false" aria-controls="collapse4-libraries"></a></td>
+              </tr> 
+            </table>
+            <div id="collapse4-libraries" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading4-libraries">
+                <div class="panel-body">
+                  This package provides an implementation of the anchorFCI algorithm. 
+                  Technical details are provided in the paper by Ribeiro et al. (2024), entitled "AnchorFCI: harnessing genetic anchors for enhanced causal discovery of cardiometabolic disease pathways", 
+                  available at <a href="https://www.frontiersin.org/journals/genetics/articles/10.3389/fgene.2024.1436947/full" target="_blank">doi: 10.3389/fgene.2024.1436947</a>.
+                  AnchorFCI is an extension of the FCI algorithm designed to improve robustness and discovery power in causal discovery by strategically selecting reliable anchors, while leveraging their known non-ancestral relationships.
+                  It operates on two sets of variables: the first set contains the variables of interest, while the second comprises variables that are not caused by any from the first.
+                  While this structure is beneficial for various applications, it is especially well-suited for datasets involving phenotypic, clinical, and sociodemographic variables (the first set), alongside genetic variables, such as SNPs (the second set), which are recognized as not being caused by the first set.
+                </div>
+              </div>
+           </div>
+
           <div class="panel panel-default">
             <table style="width:100%">
               <tr>
