--- a/dcfci_arxiv.html
+++ b/dcfci_arxiv.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://adele.github.io/assets/pdf/dcfci_arxiv_paper" />
+<meta http-equiv="refresh" content="0; url=https://adele.github.io/assets/pdf/dcfci_arxiv_paper.pdf" />
