--- a/dcfci_arxiv.html
+++ b/dcfci_arxiv.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url='https://adele.github.io/assets/pdf/dcfci_arxiv_paper.pdf'" />
+<meta http-equiv="refresh" content="0; url='https://www.arxiv.org/pdf/2505.06542'" />
