--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<li><a href="ribeiro.html">About</a></li>
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#fellowships">Fellowships</a></li>
-						<li><a href="index.html" target="_blank">Research Group</a></li>
+						<li><a href="research.html" target="_blank">Research Group</a></li>
 						<li><a href="#conferences">Conferences</a></li>
 						<li><a href="#talks">Talks</a></li>
             <li><a href="#media">Media</a></li>
@@ -106,7 +106,7 @@
             <div class="short-info wow fadeInUp" >
               <h3>About me</h3>
                 <p  align="justify">
-                I am the head of the <a href="index.html" target="_blank"><strong>CausalAI4Health</strong></a> Research Group at the 
+                I am the head of the <a href="research.html" target="_blank"><strong>CausalAI4Health</strong></a> Research Group at the 
                 <a href="https://www.medizin.uni-muenster.de/imi/das-institut.html" target="_blank">
                 <strong>Institute of Medical Informatics (IMI), University of Münster</strong></a>, Germany.
                 </p>
