--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<!-- <li><a href="#about">About</a></li> -->
-						<li><a href="ribeiro.html">About</a></li>
+						<li><a href="index.html">About</a></li>
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#fellowships">Fellowships</a></li>
 						<li><a href="research.html" target="_blank">Research Group</a></li>
