--- a/research.html
+++ b/research.html
@@ -94,12 +94,16 @@
 	
 
 	 <!-- About Section -->
-    <section id="about" class="about-section section-padding">
-      <div class="container">
+	 
+	 <section id="about" class="about-section section-padding">
+      
+    <div class="container">
+      
         <h2 class="section-title wow fadeInUp">About Us</h2>
 
-        <div class="row">
+        <div class="row justify-content-center">
 
+          <div class="col-12 col-md-12 col-lg-12">
             <div class="short-info wow fadeInUp" >
               <p  align="justify">
               We are <a href="#about"><strong>CausalAI4Health</strong></a> (Causal Artificial Intelligence for Health),
@@ -171,7 +175,7 @@
               <strong>explainable, trustworthy, and actionable AI for biomedical discovery and precision health.</strong></p>
 
             </div>
-
+        </div>
         </div> <!-- /.row -->
       </div> <!-- /.container -->
     </section><!-- End About Section -->
