updated links to research and index

--- a/research.html
+++ b/research.html
@@ -111,7 +111,7 @@
               </p>
               <p  align="justify">
               The group is led by
-              <a href="index.html" target="_blank"><strong>Dr. Adèle Helena Ribeiro</strong></a> and is hosted by the
+              <a href="index.html"><strong>Dr. Adèle Helena Ribeiro</strong></a> and is hosted by the
               <a href="https://www.medizin.uni-muenster.de/imi/das-institut.html" target="_blank"><strong>Institute of Medical Informatics at the University of Münster</strong></a>,
               with support from the German
               <i>Federal Ministry of Research, Technology and Space (BMFTR)</i>.
@@ -206,7 +206,7 @@
   <!-- Group Leader -->
   <div style="border:1px solid #e6e6e6; border-left:4px solid #1a8cd9; border-radius:6px; padding:15px 18px; margin-bottom:12px;">
     <p class="pull-right" style="font-size:0.9em;"><em>Group Leader</em></p>
-    <strong style="font-size:1.2em;"> <a href="index.html" target="_blank">Dr. Adèle Helena Ribeiro</a>  </strong>
+    <strong style="font-size:1.2em;"> <a href="index.html">Dr. Adèle Helena Ribeiro</a>  </strong>
     <div style="color:#5a5a5a; margin-top:2px;"></div>
     <p class="text-muted" style="margin:6px 0 0;">
       Research focus: Advancing Causal and Explainable AI for Health and Life Sciences.
