--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
 		     
 				<div class="collapse navbar-collapse" id="custom-collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<!-- <li><a href="#about">About</a></li> -->
-						<li><a href="index.html">About</a></li>
+					  <li><a href="#about">About</a></li>
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#fellowships">Fellowships</a></li>
 						<li><a href="research.html">Research Group</a></li>
