added learn more buttons

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <li><a href="#teaching">Teaching</a></li>
 					</ul>
 				</div>
+				</div>
 		</nav>
 		<script>
     window.location = "#about";
