fixed collapsed button

--- a/research.html
+++ b/research.html
@@ -58,8 +58,9 @@
 		      
 		      <!-- BRAND -->
           <div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#custom-collapse">
           
+
           <span class="sr-only">Toggle navigation</span>
           </button>
           <a class="navbar-brand" href="#about">
