--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		      
 		      <!-- BRAND -->
           <div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#custom-collapse">
           
           <span class="sr-only">Toggle navigation</span>
           </button>
